# gati

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
.claude/rules/: tdd.md
.claude/skills/: release.md
.claude/skills/openspec-apply-change/: SKILL.md
.claude/skills/openspec-archive-change/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
benches/: startup.rs
demo/: basic.tape  comments.tape  git-diff.tape
docs/: development.md
docs/plans/: 2026-03-09-philosophy-design.md  2026-03-13-god-object-decomposition.md  2026-03-13-refactoring.md
nix/: package.nix
openspec/changes/bug-report-feedback/: tasks.md
openspec/changes/inline-comment-editor/: design.md  proposal.md  tasks.md
openspec/specs/changed-files-filter/: spec.md
openspec/specs/diff-view/: spec.md
openspec/specs/file-search/: spec.md
openspec/specs/file-tree/: spec.md
openspec/specs/file-viewer/: spec.md
openspec/specs/git-status/: spec.md
openspec/specs/inline-comments/: spec.md
src/: app.rs  bug_report.rs  clipboard.rs  comments.rs  components.rs  diff.rs  file_tree.rs  file_viewer.rs  git_status.rs  highlight.rs  lib.rs  main.rs  test_helpers.rs  tree.rs  unicode.rs  watcher.rs
src/app/: comment_ops.rs  event_loop.rs  git_worker.rs  mod.rs  mouse.rs  render.rs
src/file_viewer/: comment_renderer.rs  content.rs  diff_state.rs  highlight_cache.rs  minimap.rs  mod.rs  render_utils.rs
(+53 files in other folders)
