[package]
name = "gati"
version = "0.1.0"
edition = "2024"
description = "A terminal tool for reviewing code, not writing it"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
anyhow = "1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

[dev-dependencies]
tempfile = "3"
