[package]
name = "gati"
version = "0.4.1"
edition = "2024"
description = "A terminal tool for reviewing code, not writing it"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
anyhow = "1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
cli-clipboard = "0.4.0"
notify-debouncer-mini = "0.5"
open = "5"

[dev-dependencies]
tempfile = "3"
